добавлен ендпоинт с meta, фикс переводов и конвертации данных
